--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-lg-6  g-4 border border-dark rounded p-0">
+        <div class="col-md-12 col-lg-6  g-4 border border-dark rounded p-0 ">
           <div class="row my-card">
             <div class="col-md-4 my-card-img">
               <img  src="images/course/course-2.png" alt="">
@@ -132,6 +132,7 @@
             </div>
           </div>
         </div>
+        
         <div class="col-md-12 col-lg-6  g-4 border border-dark rounded p-0">
           <div class="row my-card">
             <div class="col-md-4 my-card-img">
@@ -174,6 +175,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
       <div class="text-center mt-5">
         <button type="button" class="btn btn-primary btn-lg">See More Courses</button>
@@ -452,7 +454,7 @@
       </div>
     </section>
     <!-- Accordian Section End -->
-    <section class="invisible-section">
+    <section class="invisible-section mb-5">
       <div class="text-center">
         <h1 class="pb-3">Trusted by over 800+ companies</h1>
         <div class="com-icon d-flex justify-content-around">
@@ -467,6 +469,25 @@
     </section>
 
   </main>
+  <!-- footer section -->
+  <footer>
+    <div class="bg-dark text-center footer p-5 ">
+      <div class="">
+        <h1 class="">
+          Pro iTech
+        </h1>
+        <p>Office 41, Zawaya Buildin, Ghala Muscat, 
+          Sultanate of Oman</p>
+          <p>Privacy Ploicy  |   Terms of use</p>
+      </div>
+      <div class="links">
+        <a  class="about-us" href="">Contact Us</a>
+        <a  class="about-us" href=""><i class="fa-brands fa-facebook"></i></a>
+        <a  class="about-us" href=""><i class="fa-brands fa-square-twitter"></i></a>
+        <a  class="about-us" href=""><i class="fa-brands fa-square-instagram"></i></a>
+      </div>
+    </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
