--- a/index.html
+++ b/index.html
@@ -481,7 +481,10 @@
           <p>Privacy Ploicy  |   Terms of use</p>
       </div>
       <div class="links">
-      
+        <a  class="about-us" href="">Contact Us</a>
+        <a  class="about-us" href=""><i class="fa-brands fa-facebook"></i></a>
+        <a  class="about-us" href=""><i class="fa-brands fa-square-twitter"></i></a>
+        <a  class="about-us" href=""><i class="fa-brands fa-square-instagram"></i></a>
       </div>
     </div>
 </footer>
