--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="container pt-2">
-  <header class="container mb-3 " id="home">
+  <header class="container mb-3" id="home">
     <!-- Navigation Bar start -->
     <nav class=" fixed-top navbar navbar-expand-lg bg-light mb-2">
       <div class="container-fluid ">
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ">
-            <a class="nav-link active" aria-current="page" href="home">Home</a>
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
             <a class="nav-link" href="#">Courses</a>
             <a class="nav-link" href="#">Deals</a>
             <a class="nav-link" href="#">Success</a>
